<resources>
    <string name="app_name">Wadd!</string>
    <string name="home">Home</string>
    <string name="entertainment">Entertainment</string>
    <string name="leisure">Leisure</string>
    <string name="tourism">Tourism</string>
    <string name="view_all">view all</string>
    <string name="add_to_items">add to items</string>
    <string name="tab_1">tab 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_fragments">Navigation Fragments</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="view_pager">view pager</string>
    <string name="title_activity_bottom_sheet">BottomSheetActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="card_number">Card number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="security_number">Security Number</string>
    <string name="available_cards">Available cards</string>
    <string name="add_card">Add card</string>
    <string name="card_information">Card Information</string>
    <string name="rent_housing"><![CDATA[Rent & housing]]></string>
    <string name="food_drinks"><![CDATA[Food & Drinks]]></string>
    <string name="welcome_back">Welcome back</string>
    <string name="anguzu_daniel">Anguzu Daniel</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="first_page_message">Track your expenses and Know how much you are saving and you manage money the best way</string>
    <string name="save_card">Save Card</string>
    <string name="new_card">New card</string>
    <string name="profile_information">Profile information</string>
    <string name="card_settings">Card Settings</string>
    <string name="appearance">Appearance</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="arrow">arrow</string>
    <string name="zero">$0.0</string>
    <string name="expense_type">Type</string>
    <string name="subscription">subscription</string>
    <string name="onetime_payment">one time payment</string>
    <string name="un_known">unknown</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="your_balance">Your Balance</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>

    <integer-array name="expense_type_ids">
        <item>0</item> <!-- Subscription ID -->
        <item>1</item> <!-- One-time Payment ID -->
        <item>2</item> <!-- Un_known ID -->
    </integer-array>
    <string-array name="expense_type">
        <item>@string/subscription</item>
        <item>@string/onetime_payment</item>
        <item>@string/un_known</item>
    </string-array>
</resources>