<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Card Settings">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="Reset Pin Code" />

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Payment">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="Online Payment" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="ATM Withdraw" />

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="Contactless Payment" />
    </PreferenceCategory>

</PreferenceScreen>